--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -6,14 +6,17 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_ENV=production node server.js",
+    "dev:next": "next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "next": "^8.0.4",
     "package.json": "^2.0.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-fela": "^10.2.4"
   }
 }
